# OdorDiff-2

./: .env.example  .pre-commit-config.yaml  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_ENHANCEMENT_COMPLETION_REPORT.md  CI_WORKFLOW.md  CI_WORKFLOW_CONFIGURATION.md  DEPLOYMENT.md  Dockerfile  FINAL_AUTONOMOUS_QUANTUM_SDLC_COMPLETION.md  FINAL_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  FINAL_RESEARCH_PUBLICATION_REPORT.md  GENERATION_2_IMPLEMENTATION_REPORT.md  GENERATION_3_SCALING_REPORT.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_READINESS_COMPLETE.md  QUALITY_GATES_COMPLETE.md  QUANTUM_RESEARCH_PUBLICATION_REPORT.md  README.md  RESEARCH_BREAKTHROUGH_REPORT.md  RESEARCH_DISCOVERY_COMPLETE.md  REVOLUTIONARY_SDLC_BREAKTHROUGH_COMPLETION.md  SCALING_DEMONSTRATION_COMPLETE.md  SDLC_COMPLETION_REPORT.md  comprehensive_system_demo.py  demo_basic_functionality.py  docker-compose.yml  enhance_robustness.py  final_autonomous_sdlc_validation.py  final_sdlc_validation_report.json  generation_1_completion_report.json  generation_2_robustness_report.json  generation_3_scaling_report.json  global_implementation_report.json  implement_global_features.py  implement_scaling.py  initialize_pretrained_models.py  nginx.conf  prepare_production_deployment.py  production_readiness_report.json  production_readiness_validation.py  (+35 more)
.github/workflows/: ci.yml
checkpoints/: model_registry.json
config/: development.yaml  production.yaml  testing.yaml
data/: demo_prompts.json
deployment/: production-deployment-complete.yml  production.yml
deployment/argocd/: application.yaml  rollout.yaml  workflow.yaml
deployment/backup/: backup-strategy.yaml  disaster-recovery-plan.yaml
deployment/docker/: Dockerfile.production  docker-compose.production.yml  entrypoint.sh  gunicorn.conf.py
deployment/documentation/: OPERATIONS_RUNBOOK.md  PRODUCTION_DEPLOYMENT_GUIDE.md  SECURITY_PROCEDURES.md
deployment/helm/: Chart.yaml  values.yaml
deployment/istio/: gateway.yaml
deployment/kubernetes/: api-deployment.yaml  hpa.yaml  namespace.yaml
deployment/monitoring/: alerting-rules.yaml  grafana-dashboards.json  jaeger-config.yaml  prometheus-config.yaml
deployment/performance/: cdn-config.yaml  database-optimization.yaml
deployment/security/: network-policies.yaml  pod-security.yaml  vault-config.yaml
deployment/terraform/: main.tf  variables.tf
deployment/terraform/modules/aws/: main.tf
examples/: observability_integration.py
logs/: odordiff2.utils.validation_structured.jsonl
monitoring/: grafana-dashboards.json  prometheus.yml
odordiff2/: __init__.py  cli.py
odordiff2/api/: __init__.py  endpoints.py  scaling_endpoints.py  secure_endpoints.py
odordiff2/config/: settings.py
odordiff2/core/: __init__.py  async_diffusion.py  diffusion.py  quantum_enhanced_generation.py  synthesis.py
odordiff2/data/: __init__.py  cache.py
odordiff2/i18n/: __init__.py  compliance.py  odor_descriptors.py  translator.py
odordiff2/learning/: __init__.py  adaptive_learning.py  autonomous_evolution.py
odordiff2/models/: __init__.py  molecule.py  property_predictor.py
odordiff2/monitoring/: __init__.py  advanced_metrics.py  health.py  health_checks.py  metrics.py  performance.py
odordiff2/performance/: __init__.py  auto_scaling.py  load_balancing.py  model_optimization.py  monitoring.py  optimization.py
odordiff2/production/: __init__.py  industrial_optimization.py
odordiff2/research/: __init__.py  benchmark_suite.py  bio_quantum_interface.py  explainable_safety.py  multimodal_sensory_ai.py  publication_suite.py  quantum_benchmark_suite.py  quantum_diffusion.py  quantum_enhanced_diffusion.py  retrosynthesis_gnn.py  transformer_encoder.py
odordiff2/resilience/: quantum_error_correction.py
odordiff2/safety/: __init__.py  filter.py
odordiff2/scaling/: __init__.py  adaptive_load_balancer.py  auto_scaler.py  celery_tasks.py  intelligent_caching.py  load_balancer.py  model_optimization.py  multi_tier_cache.py  profiling.py  quantum_distributed_processing.py  redis_config.py  resource_pool.py  streaming.py
odordiff2/security/: __init__.py  advanced_authentication.py  advanced_safety_systems.py  authentication.py  rate_limiting.py
odordiff2/training/: __init__.py  dataset_generator.py  diffusion_trainer.py
odordiff2/utils/: __init__.py  advanced_error_handling.py  backup.py  circuit_breaker.py  error_handling.py  fallback_validation.py  logging.py  rate_limiting.py  recovery.py  security.py  validation.py
odordiff2/visualization/: __init__.py  dashboard.py  viewer.py
odordiff_env/: pyvenv.cfg
scaling/docker/: Dockerfile.api  docker-compose.scaling.yml
scaling/kubernetes/: api-deployment.yaml  namespace.yaml  redis-deployment.yaml
scripts/: deploy.sh  init-db.sql  run_comprehensive_tests.py
testing/: load_testing.py
tests/: conftest.py  conftest_advanced.py  test_api_security.py  test_core_diffusion.py  test_robustness_suite.py
tests/integration/: test_api_integration.py  test_end_to_end_workflows.py
tests/performance/: test_benchmarks.py  test_load_scenarios.py
tests/safety/: test_security_validation.py
tests/scaling/: test_auto_scaler.py
tests/security/: test_comprehensive_security.py
tests/unit/: test_async_diffusion.py  test_cache.py  test_comprehensive_modules.py  test_config.py  test_molecule.py  test_safety_filter.py  test_synthesis.py  test_validation.py
